autoscheduler/frontend/src/components/HowToUse/HowToUse.css
.paper {
    max-width: 800px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    margin-top: 16px;
    margin-bottom: 16px;
    padding-top: 8px;
}

ul {
    list-style-type: disc;
    margin-top: 0px;
    margin-bottom: 0px;
}

li {
    /* copied from typography because the <p> it creates in 
       <ul> is not valid DOM nesting. This preserves the typography
       style and maintains valid DOM nesting by not creating the <p>
    */
    font-size: 1rem;
    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
    font-weight: 400;
    line-height: 1.5;
    letter-spacing: 0.00938em;
    /* end of copied css ////////////////////////////// */
    padding-bottom: 8px;
}

p {
    margin-top: 0px;
    margin-bottom: 0px;
}

:is(h1, h2, h3, h4, h5, h6) {
    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
    font-weight: 400;
    margin-top: 0px;
    margin-bottom: 0px;
}

.center {
    margin-left: 5%;
    margin-right: auto;
    width: 90%;
}

